Improve text, fix layout bugs

--- a/_sass/_common.sass
+++ b/_sass/_common.sass
@@ -44,6 +44,9 @@ body
     &:visited
       background-color: $base-darker-color-transparent
 
+.no-m-b
+  margin-bottom: 0
+
 //==================== NAVIGATION
 .navbar-default
   padding: 15px 0 17px
@@ -75,7 +78,7 @@ body
       font-family: $menu-font
       font-weight: 700
       transition: 300ms
-      transition-timing-function
+      transition-timing-function: ease
       letter-spacing: 1.4px
     &.active a
       background-color: $base-color-transparent
@@ -237,15 +240,16 @@ ul, ol
   padding: 0
   list-style: none
 
-ul.list-check li
-  position: relative
-  font-size: 18px
-  line-height: 32px
-  &::before
-    content: "\f00c"
-    font-family: fontawesome
-    color: #68c3a3
-    margin-right: 10px
+ul.list-check 
+  li
+    position: relative
+    font-size: 18px
+    line-height: 32px
+    &::before
+      content: "\f00c"
+      font-family: fontawesome
+      color: #68c3a3
+      margin-right: 10px
 
 //==================== SECTION TITLE
 
@@ -376,6 +380,12 @@ section#contact
 
 
 //==================== MEDIA
+@media (max-width: 515px)
+  .short-info 
+    ul
+      li
+        width: 100%
+
 @media (min-width: 450px) and (max-width: $screen-xs-max)
   .myphoto
     width: 70%
@@ -394,3 +404,13 @@ section#contact
     .social-icons
       text-align: left
       margin: 20px 0
+
+@media (min-width: $screen-sm-min) and (max-width: $screen-sm-max)
+  .tasks,
+  .download-button
+    margin-right: -50%
+
+@media (min-width: $screen-sm-min)
+  .short-info 
+    h3 
+      margin-top: 0
